<resources>
    <string name="app_name">Sadak Seva</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_photo">Click Photo from Camera</string>
    <string name="add_photo_gallery">Add Photo from Gallery</string>
    <string name="name">Name</string>
    <string name="location">Location*</string>
    <string name="Potholedepth">Approx. Pothole Depth</string>
    <string name="Remark">Remark</string>
    <string name="severity_high">High</string>
    <string name="severity_medium">Medium</string>
    <string name="severity_low">Low</string>
    <string name="Potholeseverity">Pothole Severity :</string>
    <string name="dialog_message">Pothole reported Successfully !!</string>
    <string name="dialog_title">Confirmation</string>
    <string name="ok">OK</string>
    <string-array name="typeoflocation_array">
        <item>Main Road</item>
        <item>Footpath</item>
        <item>Middle of Road</item>
        <item>Sides of Road</item>
        <item>Crosswalks</item>
    </string-array>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="PrivacyPolicypara1">We collect the minimum amount of information about you that is commensurate with providing you with a satisfactory service. This policy indicates the type of processes that may result in data being collected about you. Your use of this website gives us the right to collect that information.</string>
    <string name="PrivacyPolicypara2">We may collect any or all of the information that you give us depending on the type of transaction you enter into, including your name, enrollment number, and email address, together with data about your use of the App. Other information that may be needed from time to time to process a request may also be collected as indicated on the App.</string>
    <string name="PrivacyPolicypara3">We use the information collected primarily to process the task for which you visited the website. Data collected in the UK is held in accordance with the Data Protection Act. All reasonable precautions are taken to prevent unauthorised access to this information. This safeguard may require you to provide additional forms of identity should you wish to obtain information about your account details.</string>
    <string name="PrivacyPolicypara4">We do not disclose any personal information obtained about you from this App to third parties unless you permit us to do so by ticking the relevant boxes in registration or competition forms. We may also use the information to keep in contact with you and inform you of developments associated with us. You will be given the opportunity to remove yourself from any mailing list or similar device. If at any time in the future we should wish to disclose information collected on this website to any third party, it would only be with your knowledge and consent. We may from time to time provide information of a general nature to third parties for example, the number of individuals visiting our website or completing a registration form, but we will not use any information that could identify those individuals.</string>
    <string name="PrivacyPolicypara5">Any changes to our Privacy Policy will be placed here and will supersede this version of our policy. We will take reasonable steps to draw your attention to any changes in our policy. However, to be on the safe side, we suggest that you read this document each time you use the App to ensure that it still meets with your approval.</string>
    <string name="PrivacyPolicypara6">If you have any questions about our Privacy Policy, or if you want to know what information we have collected about you, please contact us. You can also correct any factual errors in that information or require us to remove your details from any list under our control.</string>

    <string name="pphead2">Information Collected</string>
    <string name="pphead1">We are committed to protecting your privacy</string>
    <string name="pphead3">Information Use</string>
    <string name="pphead4">Disclosing Information</string>
    <string name="pphead5">Changes to this Policy</string>
    <string name="pphead6">Contacting Us</string>

    <string name="aboutApphead1">App Name :</string>
    <string name="aboutApphead2">Version :</string>
    <string name="aboutApphead3">More Details :</string>

    <string name="aboutApptext1">E - Gyan App</string>
    <string name="aboutApptext2">1.1.2</string>
    <string name="aboutApptext3">Sadak Seva App is an android application. Sadak Seva App has user-friendly interface which is easy to manage and easy to access. This App mainly is for citizens and is for easy sharing of Information related to potholes in a particular area. The application is specially optimized to be extremely easy to configure and detailed documentation is provided.</string>

    <string name="pass_hint">Password...</string>
    <string name="email_hint">Your Email...</string>
    <string name="login_logo_desc">Logo Login Page</string>
    <string name="login_btn_text">Login to account</string>
    <string name="login_reg_btn_text">Need a new Account?</string>
    <string name="action_search_text">Search</string>
    <string name="action_setting_text">Account Settings</string>
    <string name="action_logout_text">Logout</string>
    <string name="reg_btn_text">Create new Account</string>
    <string name="reg_login_text">Already have an Account?</string>
    <string name="reg_pass_text">Password...</string>
    <string name="reg_confirm_pass_text">Confirm Password...</string>
    <string name="setup_name_hint">Your Name...</string>
    <string name="setup_save_btn">Save Account Settings</string>
    <string name="setup_name_hint_text">Your Name ...</string>
    <string name="setup_name_hint_mobile">Your Mobile ...</string>
    <string name="setup_name_hint_address">Your Address ...</string>
    <string name="setup_btn_name_text">Save Account Settings</string>
    <string name="logout_btn">Logout</string>
    <string name="post_desc_hint">Add Description ...</string>
    <string name="new_post_btn_hint">Post Blog</string>
    <string name="bottom_home_text">Home</string>
    <string name="bottom_notification_text">Notification</string>
    <string name="bottom_ac_text">Account</string>
    <string name="title_activity_navigation">Sadak Seva App</string>


    <!-- TODO: Remove or change this placeholder text -->


    <!--<string name="default_web_client_id" translatable="false">1038849839871-pivr1gjlks8vnbp00n8728t5nh02bjrl.apps.googleusercontent.com</string>
    <string name="firebase_database_url" translatable="false">https://application-bf38b.firebaseio.com</string>
    <string name="gcm_defaultSenderId" translatable="false">1038849839871</string>
    <string name="google_api_key" translatable="false">AIzaSyAJhF_bijy88trquCVxun2SxDDogCluNCE</string>
    <string name="google_app_id" translatable="false">1:1038849839871:android:1e50788095ea64ee</string>
    <string name="google_crash_reporting_api_key" translatable="false">AIzaSyAJhF_bijy88trquCVxun2SxDDogCluNCE</string>
    <string name="google_storage_bucket" translatable="false">application-bf38b.appspot.com</string>
    <string name="project_id" translatable="false">application-bf38b</string>-->
</resources>
